--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
               </div>
             </div>
           </div>
-                    <!--events-->
+                    <!--About-->
                     <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;About&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
                       <!-- <a href="https://www.freepik.com/free-photos-vectors/mockup">Mockup psd created by Qeaql-studio - Freepik.com</a>-->
                       <div class="parallax-scene container-screen">
@@ -101,6 +101,71 @@ april 29 & 30.
                         </div>
                       </div>
                     </div>
+                              <!--Sponser-->
+          <div class="swiper-slide context-dark" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Sponsors&lt;/span&gt;&lt;span class=&quot;fa-phone swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
+            <div class="parallax-scene container-screen">
+              <div class="layer container-screen parallax-scene-img-height" data-depth="0.01" style="opacity: 1;"><img src="assets/images/contact-02.png" alt=""></div>
+            </div>
+            <div class="swiper-slide-caption" data-swiper-parallax="-2000" data-swiper-parallax-opacity="0">
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-12 col-lg-8">
+                    <div class="row row-20 justify-content-center justify-content-lg-between align-items-center">
+                      <li class="l-section section team--section">
+                        <div class="team__heading--bg heading__primary">
+                            <h1></h1>
+                        </div>
+                        <div class="team__container">
+                            <div class="team__cards">
+                                <div class="sponsors-wrapper">
+                                    <h1 class="sponsors-main-title">
+                                        
+                                        <br><br>
+                                    </h1>
+                                </div>
+                                <div class="sponsors-wrapper">
+                                    <h5 class="sponsors-sub-title">
+                                        Sponsors
+                                    </h5>
+                                </div>
+                                <div class="team__row">
+                                    <div class="team__card">
+                                        <div class="team__card-img">
+                                            <img loading="lazy" src="./assets/images/LAVISH.png" alt="Staff-1">
+                                        </div>
+                                        <div class="team__card-details" >
+                                            <h8>Wadakkanchery Road, Kunnamkulam</h8>
+                                            <h8>Thrissur, Kerala</h8>
+                                        </div>
+                                    </div>
+                                    <div class="team__card">
+                                      <div class="team__card-img">
+                                        <img loading="lazy" src="./assets/images/KATPENTER.png" alt="Staff-1">
+                                      </div>
+                                      <div class="team__card-details">
+                                        <h8>CID COMPLEX, Vinpy Nagar </h8>
+                                        <h8>Paravattani, Thrissur</h8>
+                                      </div>
+                                  </div>
+                                  <div class="team__card">
+                                      <div class="team__card-img">
+                                        <img loading="lazy" src="./assets/images/Link l ines.png" alt="Staff-1">
+                                      </div>
+                                      <div class="team__card-details">
+                                          <h8>Post Office Rd, Veliyannur</h8><h8>Thrissur, Kerala </h8>
+                                      </div>
+                                  </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </li>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <!--events-->
           <div class="swiper-slide context-dark swiper-content-bottom" data-title="&lt;span class=&quot;swiper-pagination-title&quot;&gt;Events&lt;/span&gt;&lt;span class=&quot;fa-cloud-download swiper-pagination-icon&quot;&gt;&lt;/span&gt;">
             <!-- <a href="https://www.freepik.com/free-photos-vectors/mockup">Mockup psd created by Qeaql-studio - Freepik.com</a>-->
